# mxl-investigator

./: .gitmodules  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  cog.toml  icons.toml  justfile  setup.py
.github/workflows/: check.yml
.github/workflows/mxl-setup/: action.yml
i18n/en/: mxl_investigator.ftl
src/: lib.rs  misc.rs  proc_dir.rs
src/create_report_dialog/: messages.rs  model.rs  widget.rs
src/problem_report_dialog/: messages.rs  model.rs  widget.rs
